--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             <button class="Easy" onclick="location.href='easy.html'">FACILE</button>
             <button class="Medium" onclick="location.href='medium.html'">MEDIUM</button>
             <button class="Hard" onclick="location.href='hard.html'">DIFFICILE</button>
-            <button onclick="help()">Help</button>
+            <button onclick="help_bot()">Help</button>
         </div>
 
-        <div id="helpMenu1" class="help-menu">
+        <div id="helpMenu" class="help-menu">
             <h2>Instructions du jeu</h2>
             <p>Ce jeu consiste à essayer de deviner le nombre secret en un nombre limité d'oportunitees et grace à certaines pistes</p>
             <li class="Vert"> Vert: Chiffre dans le nombre et bien placée</li>
